--- a/package.json
+++ b/package.json
@@ -30,7 +30,12 @@
     "eslint-plugin-import": "^2.23.4"
   },
   "dependencies": {
+    "@ossso/utils": "^1.0.4",
     "ali-oss": "^6.17.1",
+    "cos-nodejs-sdk-v5": "^2.11.6",
+    "ignore": "^5.2.0",
+    "progress": "^2.0.3",
+    "scp2": "^0.5.0",
     "single-line-log": "^1.1.2"
   }
 }
