--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@ossso/utils": "^1.0.4",
     "ali-oss": "^6.17.1",
+    "chalk": "^4.1.2",
     "cos-nodejs-sdk-v5": "^2.11.6",
     "ignore": "^5.2.0",
     "progress": "^2.0.3",
