--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.1",
   "description": "前端发布工具",
   "main": "index.js",
+  "exports": { 
+    "require": "./dist/index.cjs",
+    "import": "./src/index.js" 
+  },
   "scripts": {
+    "build": "rollup ./src/index.js --file dist/index.cjs --format cjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,17 +25,18 @@
   },
   "homepage": "https://github.com/ossso/front-deply#readme",
   "devDependencies": {
-    "eslint": "^7.28.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.4"
-  },
-  "dependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "@babel/register": "^7.13.16",
-    "@ossso/utils": "^1.0.4",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "rollup": "^2.70.1"
+  },
+  "dependencies": {
+    "@ossso/utils": "^1.0.4",
     "ali-oss": "^6.17.1",
     "chalk": "^4.1.2",
     "cos-nodejs-sdk-v5": "^2.11.6",
