--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "cos-nodejs-sdk-v5": "^2.11.6",
     "ignore": "^5.2.0",
     "progress": "^2.0.3",
-    "scp2": "^0.5.0",
-    "single-line-log": "^1.1.2"
+    "single-line-log": "^1.1.2",
+    "ssh2-sftp-client": "^9.1.0"
   }
 }
