--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ossso/front-deploy",
   "version": "1.2.0",
-  "description": "前端发布工具",
+  "description": "前端内容自动化部署工具",
   "main": "index.js",
   "exports": {
     "require": "./dist/index.cjs",
