--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "@ossso/front-deploy",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "前端内容自动化部署工具",
-  "main": "index.js",
-  "exports": {
-    "require": "./dist/index.cjs",
-    "import": "./src/index.js"
-  },
+  "type": "module",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "scripts": {
-    "build": "rollup ./src/index.js --file dist/index.cjs --format cjs",
+    "build": "rollup -c",
     "release": "npm run build && npm publish",
+    "eslint": "eslint . --ext .js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,12 +28,16 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "@babel/register": "^7.13.16",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "eslint": "^7.28.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
-    "rollup": "^2.70.1"
+    "rollup": "^4.18.1",
+    "rollup-plugin-node-externals": "^7.1.2"
   },
   "dependencies": {
     "@ossso/utils": "^1.2.1",
